tests/fixtures/invalid/int_bitxor_dict.py
# Cannot bitwise XOR Int and Dict[str, int]
x: int = 1 ^ {"a": 1}
